care/force-app/main/default/objects/Round_Robin_Member__c/fields/Real_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Real_Task_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Real Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>