care/force-app/main/default/objects/Round_Robin_Member__c/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <label>Round Robin</label>
    <referenceTo>Round_Robin__c</referenceTo>
    <relationshipLabel>Round Robin Members</relationshipLabel>
    <relationshipName>Round_Robin_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>