care/force-app/main/default/objects/Round_Robin_Member__c/fields/Round_Robin_Name__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Name__c</fullName>
    <formula>Round_Robin__r.Name</formula>
    <label>Round Robin Name</label>
    <type>Text</type>
</CustomField>