care/force-app/main/default/objects/Round_Robin_Member__c/listViews/Archived_Round_Robin_Members.listView-meta.xml
<ListView>
    <fullName>Archived_Round_Robin_Members</fullName>
    <columns>Round_Robin__c</columns>
    <columns>User__c</columns>
    <columns>Active__c</columns>
    <columns>Real_Task_Count__c</columns>
    <columns>Round_Robin_Vertical__c</columns>
    <columns>Task_Counter__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Archived Round Robin Members</label>
</ListView>